@@ -150,6 +150,8 @@ IMPROVEMENTS:
   ZOOKEEPER-756. some cleanup and improvements for zooinspector
   (Colin Goodheart-Smithe & Thomas Koch via phunt)
 
+  ZOOKEEPER-1292.  FLETest is flaky (flp via breed)
+
 Release 3.4.0 - 
 
 Non-backward compatible changes:
